--- a/B9/2/index.1
+++ b/B9/2/index.1
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <!--Megjegyzés-->
-<!--Harmadik honlapom -->
- <html lang="hu">
+<!--Harmadik honlapom-->
+ <html lang="hu"> 
 	<head>
 		<meta charset="utf-8">
-        <title>Harmadik+ honlapom</title>
+        <title>Goldi 3 honlapja</title>
 		<style>
-		    h1 {color:red}
-			p {color : blue; font-size:120;}
+		h1 {color:red; align="center"} 
+		p {color:blue; font-size:120%; align="center";} 
 		</style>
 		<link rel="stylesheet" href="goldi.css">
 	</head>
-     <body lang=HU>   
-        <h1 align="center">Harmadik kutyás honlpom<h1>
-        <p align="center">Ez egybekezdés, <br> amiben sortörés és középre igazítást alkalmaztam</p>
-        <img src="goldi.jpg" alt="A kutyám, aki egy Golden Retriver.">	
-        <p> A Golden Retriver bemutatása
-        </p>
-        <p>
-A Golden Retriever bemutatása
-Kezdőlap Típusok
-
-A Golden Retriever egy kedves, barátságos kutyafajta, mely Skóciából származik.
+     <body>    
+	<body lang=HU 
+	<h1>Harmadik kutyás honlapom </h1> 
+	<p>Ez egy bekezdés <br> amiben ortörés, és középre igazítást alkalmaztunk.</p>
+	<img src="goldi.jpg" height="200" alt="A kutyám, aki egy golden retriver."
+	title="Goldi, a kutyám (felnőttkorában)">
+	<p> 
+	A Golden Retriever egy kedves, barátságos kutyafajta, mely Skóciából származik.
 A fajta tudományos megnevezése: Golden Retriever - Canis lupus familiaris.
 
 Fontos! Ha gazdi szeretnél lenni, nézz utána, hogy a felelős kutyatartással kapcsolatban milyen ajánlások és kötelezettségek vannak!
@@ -36,7 +33,5 @@ Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a Pixabay port
 
 A videón is láthatod, hogy Goldi nagyon szeret a földön hemperegni, amely miatt általában koszosan jövünk haza a sétából.
 
-Vissza az oldal tetejére	
-        </p>
-	</body>
+Vissza az oldal tetejére
 </html>
